upgraded to bootstrap 5.3 for dark mode, fixed quiz api error

--- a/Pages/User/Articles.razor
+++ b/Pages/User/Articles.razor
@@ -2,16 +2,16 @@
 @inject IApiRepository repository
 
 <!-- Header-->
-<header class="bg-white py-5 medbase-font">
+<header class="py-5 medbase-font">
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
             <div class="col-lg-8 col-xl-4 col-xxl-4">
                 <div class="my-5 text-center text-xl-start">
-                    <h1 class="display-5 fw-bolder text-dark mb-2"
+                    <h1 class="display-5 fw-bolder mb-2"
                         style="font-size:4.75rem">
                         Articles🥸
                     </h1>
-                    <p class="lead fw-normal text-black-50 mb-4">
+                    <p class="lead fw-normal mb-4">
                         Welcome to our Articles.
                         New articles every <em>Monday at 6pm</em>, touching on topics like psychology, money, studying and book reviews.
                     </p>
