--- a/Pages/User/Courses.razor
+++ b/Pages/User/Courses.razor
@@ -27,7 +27,7 @@
                     <div class="card h-100 shadow border-0">
                         <img class="card-img-top" src="@item.ImageURL" alt="..." />
                         <div class="card-body p-4">
-                            <a class="text-decoration-none link-dark stretched-link" href="@($"/topics/{item.CourseRef}")">
+                            <a class="text-decoration-none stretched-link" href="@($"/topics/{item.CourseRef}")">
                                 <h5 class="card-title mb-3">
                                     @item.Title
                                 </h5>
