--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -5,18 +5,18 @@
 
 <!-- Header-->
 <div class="alert alert-primary" role="alert">
-    New course added: Immunology and Medical Microbiology
+    Did you know Medbase is now in the Play Store? <a href="https://play.google.com/store/apps/details?id=com.tanakamawere.medbasehybrid">Download Now</a>
 </div>
-<header class="bg-white py-5">
+<header class="py-5">
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
             <div class="col-lg-8 col-xl-7 col-xxl-6">
                 <div class="my-5 text-center text-xl-start">
-                    <h1 class="display-5 fw-bolder text-dark mb-2">medbase😃</h1>
+                    <h1 class="display-5 fw-bolder mb-2">medbase😃</h1>
                     <p class="lead fw-normal text-dark-50 mb-4">Over 1,500 MCQs (with answers) on Anatomy, Physiology & Pathology</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                         <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/courses">Get Started👉</a>
-                        <a class="btn btn-outline-dark btn-lg px-4" href="/about">Learn More📖</a>
+                        <a class="btn btn-outline-primary btn-lg px-4" href="/about">Learn More📖</a>
                     </div>
                 </div>
             </div>
