--- a/Pages/User/Questions.razor
+++ b/Pages/User/Questions.razor
@@ -128,7 +128,7 @@ else
                 </div>
             </div>
             <div class="justify-content-sm-center justify-content-xl-start text-center m-2">
-                <button class="btn btn-outline-dark px-4" @onclick="() => ShowAnswers(question.Id)">
+                <button class="btn btn-outline-primary px-4" @onclick="() => ShowAnswers(question.Id)">
                     <span class="oi oi-envelope-open" aria-hidden="true"></span>
                 </button>
             </div>
