--- a/Pages/User/ChangeLog.razor
+++ b/Pages/User/ChangeLog.razor
@@ -3,14 +3,29 @@
 <PageTitle>Medbase | Change Log</PageTitle>
 
 <div class="container">
+    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Change Log</li>
+        </ol>
+    </nav>
     <div class="justify-content-center align-content-center">
         <ul>
             <li>
-                <h2 class="fw-bold">Version 1.0.4</h2>
-                <h5 class="text-muted">Release Date: 14 February 2023</h5>
+                <h2 class="fw-bold">Version 1.2</h2>
+                <h5 class="text-muted">Release Date: 11 March 2023</h5>
                 <ul>
                     <li>
-                        Bug fixes and improvements
+                        Fixed error with quizzes that showed the same questions every session
+                    </li>
+                    <li>
+                        <em>*New Feature*</em> Breadcrumbs for easier navigation on the website
+                    </li>
+                    <li>
+                        <em>*New Feature*</em> Dark mode for mobile application
+                    </li>
+                    <li>
+                        Added new courses => Immunology and Medical Microbiology (3rd Year)
                     </li>
                 </ul>
             </li>
@@ -26,6 +41,15 @@
                     </li>
                     <li>
                         User accounts removed
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h2 class="fw-bold">Version 1.0.4</h2>
+                <h5 class="text-muted">Release Date: 14 February 2023</h5>
+                <ul>
+                    <li>
+                        Bug fixes and improvements
                     </li>
                 </ul>
             </li>
