--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -5,6 +5,9 @@
 
 <!-- Header-->
 <div class="alert alert-primary" role="alert">
+    NEW UPDATE: Version 1.2 See something different? Read our <a href="/changelog">Change Log</a> to learn more
+</div>
+<div class="alert alert-primary" role="alert">
     Did you know Medbase is now in the Play Store? <a href="https://play.google.com/store/apps/details?id=com.tanakamawere.medbasehybrid">Download Now</a>
 </div>
 <header class="py-5">
