--- a/Pages/User/Questions.razor
+++ b/Pages/User/Questions.razor
@@ -5,18 +5,24 @@
 @using Markdig
 
 <PageTitle>Questions</PageTitle>
-@if (!QuestionPaged.Questions.Any())
-{
-    <div class="text-center">
-        <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
-            <span class="visually-hidden">Loading...</span>
-        </div>
-        <span class="visible">Loading your questions, please wait a bit...😛</span>
-    </div>
-}
-else
-{
-    <div class="container text-center mb-3">
+
+<div class="text-center">
+
+    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item"><a href="/courses">Courses</a></li>
+            <li class="breadcrumb-item"><a href="/courses">Topics</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Questions</li>
+        </ol>
+    </nav>
+
+    @if (!QuestionPaged.Questions.Any())
+    {
+        <LoadingComponent />
+    }
+    else
+    {
         <div class="row">
             <div class="col">
                 <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage -1)" class="btn btn-outline-primary @(!(QuestionPaged.CurrentPage > 1) ? "disabled" : "")">
@@ -28,114 +34,115 @@ else
             </div>
             <div class="col">
                 <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage +1)"
-                    class="btn btn-outline-primary @(!(QuestionPaged.CurrentPage < QuestionPaged.Pages) ? "disabled" : "")">
+                        class="btn btn-outline-primary @(!(QuestionPaged.CurrentPage < QuestionPaged.Pages) ? "disabled" : "")">
                     Next
                 </button>
             </div>
         </div>
-    </div>
-    <Virtualize Items="QuestionPaged.Questions.ToList()" Context="question" TItem="Question">
-        <ItemContent>
+        <Virtualize Items="QuestionPaged.Questions.ToList()" Context="question" TItem="Question">
+            <ItemContent>
 
-            <div class="container-fluid" style="max-width:500px">
-                <!--Question-->
-                <div class="row">
-                    <div class="col">
-                        <h5 class="h5">
-                            @question.Id - @question.QuestionMain
-                        </h5>
+                <div class="container-fluid">
+                    <!--Question-->
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="h5">
+                                @question.Id - @question.QuestionMain
+                            </h5>
+                        </div>
+                        <div class="col col-2">
+                            <a class="btn"
+                               href="https://wa.me/263718086035?text=Questions%20ID:%20@(question.Id)%20has%20an%20error.%20(Please%20write%20your%20suggested%20answers%20here.)">
+                                <i class="bi bi-flag text-dark"
+                                   style="font-size:small"></i>
+                            </a>
+                        </div>
                     </div>
-                    <div class="col col-2">
-                        <a class="btn"
-                       href="https://wa.me/263718086035?text=Questions%20ID:%20@(question.Id)%20has%20an%20error.%20(Please%20write%20your%20suggested%20answers%20here.)">
-                            <i class="bi bi-flag text-dark"
-                           style="font-size:small"></i>
-                        </a>
+                    <input hidden asp-for="@question.Id" />
+                    <div class="text-start">
+                        <!--Child1-->
+                        <div>
+                            <div class="col">
+                                <p class="card-text">a) @question.ChildA</p>
+                            </div>
+                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                <div class="card-body p-1">
+                                    <p class="card-text">
+                                        @question.AnswerA.ToString()
+                                    </p>
+                                    @((MarkupString)Markdown.ToHtml(question.ExplanationA == null ? " " : question.ExplanationA))
+                                </div>
+                            </div>
+                        </div>
+                        <!--Child2-->
+                        <div>
+                            <div class="col">
+                                <p class="card-text">b) @question.ChildB</p>
+                            </div>
+                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                <div class="card-body p-1">
+                                    <p class="card-text">
+                                        @question.AnswerB.ToString()
+                                    </p>
+                                    @((MarkupString)Markdown.ToHtml(question.ExplanationB == null ? " " : question.ExplanationB))
+                                </div>
+                            </div>
+                        </div>
+                        <!--Child3-->
+                        <div>
+                            <div class="col">
+                                <p class="card-text">c) @question.ChildC</p>
+                            </div>
+                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                <div class="card-body p-1">
+                                    <p class="card-text">
+                                        @question.AnswerC.ToString()
+                                    </p>
+                                    @((MarkupString)Markdown.ToHtml(question.ExplanationC == null ? " " : question.ExplanationC))
+                                </div>
+                            </div>
+                        </div>
+                        <!--Child4-->
+                        <div>
+                            <div class="col">
+                                <p class="card-text">d) @question.ChildD</p>
+                            </div>
+                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                <div class="card-body p-1">
+                                    <p class="card-text">
+                                        @question.AnswerD.ToString()
+                                    </p>
+                                    @((MarkupString)Markdown.ToHtml(question.ExplanationD == null ? " " : question.ExplanationD))
+                                </div>
+                            </div>
+                        </div>
+                        <!--Child5-->
+                        <div>
+                            <div class="col">
+                                <p class="card-text">e) @question.ChildE</p>
+                            </div>
+                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                <div class="card-body p-1">
+                                    <p class="card-text">
+                                        @question.AnswerE.ToString()
+                                    </p>
+                                    @((MarkupString)Markdown.ToHtml(question.ExplanationE == null ? " " : question.ExplanationE))
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <input hidden asp-for="@question.Id" />
-                <div class="text-start">
-                    <!--Child1-->
-                    <div>
-                        <div class="col">
-                            <p class="card-text">a) @question.ChildA</p>
-                        </div>
-                        <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                            <div class="card-body p-1">
-                                <p class="card-text">
-                                    @question.AnswerA.ToString()
-                                </p>
-                                @((MarkupString)Markdown.ToHtml(question.ExplanationA == null ? " " : question.ExplanationA))
-                            </div>
-                        </div>
-                    </div>
-                    <!--Child2-->
-                    <div>
-                        <div class="col">
-                            <p class="card-text">b) @question.ChildB</p>
-                        </div>
-                        <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                            <div class="card-body p-1">
-                                <p class="card-text">
-                                    @question.AnswerB.ToString()
-                                </p>
-                                @((MarkupString)Markdown.ToHtml(question.ExplanationB == null ? " " : question.ExplanationB))
-                            </div>
-                        </div>
-                    </div>
-                    <!--Child3-->
-                    <div>
-                        <div class="col">
-                            <p class="card-text">c) @question.ChildC</p>
-                        </div>
-                        <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                            <div class="card-body p-1">
-                                <p class="card-text">
-                                    @question.AnswerC.ToString()
-                                </p>
-                                @((MarkupString)Markdown.ToHtml(question.ExplanationC == null ? " " : question.ExplanationC))
-                            </div>
-                        </div>
-                    </div>
-                    <!--Child4-->
-                    <div>
-                        <div class="col">
-                            <p class="card-text">d) @question.ChildD</p>
-                        </div>
-                        <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                            <div class="card-body p-1">
-                                <p class="card-text">
-                                    @question.AnswerD.ToString()
-                                </p>
-                                @((MarkupString)Markdown.ToHtml(question.ExplanationD == null ? " " : question.ExplanationD))
-                            </div>
-                        </div>
-                    </div>
-                    <!--Child5-->
-                    <div>
-                        <div class="col">
-                            <p class="card-text">e) @question.ChildE</p>
-                        </div>
-                        <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                            <div class="card-body p-1">
-                                <p class="card-text">
-                                    @question.AnswerE.ToString()
-                                </p>
-                                @((MarkupString)Markdown.ToHtml(question.ExplanationE == null ? " " : question.ExplanationE))
-                            </div>
-                        </div>
-                    </div>
+                <div class="justify-content-sm-center justify-content-xl-start text-center m-2">
+                    <button class="btn btn-outline-primary px-4" @onclick="() => ShowAnswers(question.Id)">
+                        <span class="oi oi-envelope-open" aria-hidden="true"></span>
+                    </button>
                 </div>
-            </div>
-            <div class="justify-content-sm-center justify-content-xl-start text-center m-2">
-                <button class="btn btn-outline-primary px-4" @onclick="() => ShowAnswers(question.Id)">
-                    <span class="oi oi-envelope-open" aria-hidden="true"></span>
-                </button>
-            </div>
 
-        </ItemContent>
-    </Virtualize>
-}
+            </ItemContent>
+        </Virtualize>
+    }
+</div>
+
 
 
 @code {
