--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -4,7 +4,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="MedbaseBlazor.styles.css" rel="stylesheet" />
+
+    <!--Breadcrumb from syncfusion-->
+    <link href="https://cdn.syncfusion.com/blazor/20.4.48/styles/bootstrap5.css" rel="stylesheet" />
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 
     
     <!--WhatsApp Metas-->
