--- a/Pages/User/Courses.razor
+++ b/Pages/User/Courses.razor
@@ -19,26 +19,27 @@
     }
     else
     {
-        @foreach (Course item in CoursesList)
-        {
-            <div class="row gx-5">
-                <div class="col-lg-4 mb-5">
+        <div class="row gx-5">
+            @foreach (Course item in CoursesList)
+            {
+                <div class="col-6 col-lg-4 mb-5">
                     <div class="card h-100 shadow border-0">
                         <img class="card-img-top" src="@item.ImageURL" alt="..." />
                         <div class="card-body p-4">
                             <a class="text-decoration-none stretched-link" href="@($"/topics/{item.CourseRef}")">
-                                <h5 class="card-title mb-3">
+                                <h6 class="card-title mb-3">
                                     @item.Title
-                                </h5>
+                                </h6>
                             </a>
-                            <p class="card-text mb-0">
+                            <p class="card-text mb-0 d-lg-block d-none fw-light fst-normal">
                                 @item.Description
                             </p>
                         </div>
                     </div>
                 </div>
-            </div>
-        }
+            }
+        </div>
+        
     }
 </div>
 
