--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -13,10 +13,6 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="MedbaseBlazor.styles.css" rel="stylesheet" />
 
-    <!--Breadcrumb from syncfusion-->
-    <link href="https://cdn.syncfusion.com/blazor/20.4.48/styles/bootstrap5.css" rel="stylesheet" />
-    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
-
     
     <!--WhatsApp Metas-->
     <meta property="og:site_name" content="Medbase | Medical School MCQs">
@@ -56,6 +52,9 @@
             y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
         })(window, document, "clarity", "script", "aofoivw89v");
     </script>
+
+    <!--Google Ads Line-->
+    <script data-ad-client="ca-pub-7010150994074481" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
