--- a/Pages/User/Questions.razor
+++ b/Pages/User/Questions.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>Questions</PageTitle>
 
-<div class="text-center">
+<div class="text-center position-absolute">
 
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -19,128 +19,163 @@
 
     @if (!QuestionPaged.Questions.Any())
     {
-        <LoadingComponent />
+        <div style="display:@(searchResultsNull == true ? "none" : "block");">
+            <LoadingComponent />
+        </div>
+
+        <div style="display:@(searchResultsNull == true ? "block" : "none");">
+            Your search term did not bring back any results on this topic.
+            Try to search in another topic.
+        </div>
     }
     else
     {
-        <div class="row">
-            <div class="col">
-                <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage -1)" class="btn btn-outline-primary @(!(QuestionPaged.CurrentPage > 1) ? "disabled" : "")">
-                    Previous
-                </button>
-            </div>
-            <div class="col">
-                Page @QuestionPaged.CurrentPage of @QuestionPaged.Pages
-            </div>
-            <div class="col">
-                <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage +1)"
-                        class="btn btn-outline-primary @(!(QuestionPaged.CurrentPage < QuestionPaged.Pages) ? "disabled" : "")">
-                    Next
-                </button>
-            </div>
+
+        <div style="margin-bottom:110px;">
+            <Virtualize Items="QuestionPaged.Questions.ToList()" Context="question" TItem="Question">
+                <ItemContent>
+
+                    <div class="container-fluid">
+                        <!--Question-->
+                        <div class="row">
+                            <div class="col">
+                                <h5 class="h5">
+                                    @question.Id - @question.QuestionMain
+                                </h5>
+                            </div>
+                            <div class="col col-2">
+                                <a class="btn"
+                                   href="https://wa.me/263718086035?text=Questions%20ID:%20@(question.Id)%20has%20an%20error.%20(Please%20write%20your%20suggested%20answers%20here.)">
+                                    <i class="bi bi-flag text-dark"
+                                       style="font-size:small"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <input hidden asp-for="@question.Id" />
+                        <div class="text-start">
+                            <!--Child1-->
+                            <div>
+                                <div class="col">
+                                    <p class="card-text">a) @question.ChildA</p>
+                                </div>
+                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <div class="card-body p-1">
+                                        <p class="card-text">
+                                            @question.AnswerA.ToString()
+                                        </p>
+                                        @((MarkupString)Markdown.ToHtml(question.ExplanationA == null ? " " : question.ExplanationA))
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Child2-->
+                            <div>
+                                <div class="col">
+                                    <p class="card-text">b) @question.ChildB</p>
+                                </div>
+                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <div class="card-body p-1">
+                                        <p class="card-text">
+                                            @question.AnswerB.ToString()
+                                        </p>
+                                        @((MarkupString)Markdown.ToHtml(question.ExplanationB == null ? " " : question.ExplanationB))
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Child3-->
+                            <div>
+                                <div class="col">
+                                    <p class="card-text">c) @question.ChildC</p>
+                                </div>
+                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <div class="card-body p-1">
+                                        <p class="card-text">
+                                            @question.AnswerC.ToString()
+                                        </p>
+                                        @((MarkupString)Markdown.ToHtml(question.ExplanationC == null ? " " : question.ExplanationC))
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Child4-->
+                            <div>
+                                <div class="col">
+                                    <p class="card-text">d) @question.ChildD</p>
+                                </div>
+                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <div class="card-body p-1">
+                                        <p class="card-text">
+                                            @question.AnswerD.ToString()
+                                        </p>
+                                        @((MarkupString)Markdown.ToHtml(question.ExplanationD == null ? " " : question.ExplanationD))
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Child5-->
+                            <div>
+                                <div class="col">
+                                    <p class="card-text">e) @question.ChildE</p>
+                                </div>
+                                <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
+                                    <div class="card-body p-1">
+                                        <p class="card-text">
+                                            @question.AnswerE.ToString()
+                                        </p>
+                                        @((MarkupString)Markdown.ToHtml(question.ExplanationE == null ? " " : question.ExplanationE))
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="justify-content-sm-center justify-content-xl-start text-center m-2">
+                        <button class="btn btn-outline-primary px-4" @onclick="() => ShowAnswers(question.Id)">
+                            <span class="oi oi-envelope-open" aria-hidden="true"></span>
+                        </button>
+                    </div>
+
+                </ItemContent>
+            </Virtualize>
         </div>
-        <Virtualize Items="QuestionPaged.Questions.ToList()" Context="question" TItem="Question">
-            <ItemContent>
-
-                <div class="container-fluid">
-                    <!--Question-->
-                    <div class="row">
-                        <div class="col">
-                            <h5 class="h5">
-                                @question.Id - @question.QuestionMain
-                            </h5>
-                        </div>
-                        <div class="col col-2">
-                            <a class="btn"
-                               href="https://wa.me/263718086035?text=Questions%20ID:%20@(question.Id)%20has%20an%20error.%20(Please%20write%20your%20suggested%20answers%20here.)">
-                                <i class="bi bi-flag text-dark"
-                                   style="font-size:small"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <input hidden asp-for="@question.Id" />
-                    <div class="text-start">
-                        <!--Child1-->
-                        <div>
-                            <div class="col">
-                                <p class="card-text">a) @question.ChildA</p>
-                            </div>
-                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                <div class="card-body p-1">
-                                    <p class="card-text">
-                                        @question.AnswerA.ToString()
-                                    </p>
-                                    @((MarkupString)Markdown.ToHtml(question.ExplanationA == null ? " " : question.ExplanationA))
-                                </div>
-                            </div>
-                        </div>
-                        <!--Child2-->
-                        <div>
-                            <div class="col">
-                                <p class="card-text">b) @question.ChildB</p>
-                            </div>
-                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                <div class="card-body p-1">
-                                    <p class="card-text">
-                                        @question.AnswerB.ToString()
-                                    </p>
-                                    @((MarkupString)Markdown.ToHtml(question.ExplanationB == null ? " " : question.ExplanationB))
-                                </div>
-                            </div>
-                        </div>
-                        <!--Child3-->
-                        <div>
-                            <div class="col">
-                                <p class="card-text">c) @question.ChildC</p>
-                            </div>
-                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                <div class="card-body p-1">
-                                    <p class="card-text">
-                                        @question.AnswerC.ToString()
-                                    </p>
-                                    @((MarkupString)Markdown.ToHtml(question.ExplanationC == null ? " " : question.ExplanationC))
-                                </div>
-                            </div>
-                        </div>
-                        <!--Child4-->
-                        <div>
-                            <div class="col">
-                                <p class="card-text">d) @question.ChildD</p>
-                            </div>
-                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                <div class="card-body p-1">
-                                    <p class="card-text">
-                                        @question.AnswerD.ToString()
-                                    </p>
-                                    @((MarkupString)Markdown.ToHtml(question.ExplanationD == null ? " " : question.ExplanationD))
-                                </div>
-                            </div>
-                        </div>
-                        <!--Child5-->
-                        <div>
-                            <div class="col">
-                                <p class="card-text">e) @question.ChildE</p>
-                            </div>
-                            <div class="container card h-100 border-1" style="display:@(Answers == 1 && qts == question.Id ? "block" : "none")">
-                                <div class="card-body p-1">
-                                    <p class="card-text">
-                                        @question.AnswerE.ToString()
-                                    </p>
-                                    @((MarkupString)Markdown.ToHtml(question.ExplanationE == null ? " " : question.ExplanationE))
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="justify-content-sm-center justify-content-xl-start text-center m-2">
-                    <button class="btn btn-outline-primary px-4" @onclick="() => ShowAnswers(question.Id)">
-                        <span class="oi oi-envelope-open" aria-hidden="true"></span>
-                    </button>
-                </div>
-
-            </ItemContent>
-        </Virtualize>
     }
+    <div class="fixed-bottom">
+        <TopNavBar>
+            <div class="container align-content-center justify-content-center text-center">
+                <div class="mb-2" style="display:@(searchBarOpen == true ? "block" : "none");">
+                    <div class="row text-center">
+                        <div class="col-10">
+                            <InputText class="form-control" DisplayName="searchQuestions" @bind-Value="searchTerm" placeholder="Search for one keyword" />
+                        </div>
+                        <div class="col-2">
+                            <button class="btn btn-primary" @onclick="() => GetSearchQuestions()">
+                                <span class="oi oi-magnifying-glass" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="row col">
+                        <div class="col-4">
+                            <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage -1)" class="btn btn-outline-light @(!(QuestionPaged.CurrentPage > 1) ? "disabled" : "")">
+                                Previous
+                            </button>
+                        </div>
+                        <div class="col-4 text-center">
+                            <p style="font-size:small">
+                                Page @QuestionPaged.CurrentPage / @QuestionPaged.Pages
+                            </p>
+                        </div>
+                        <div class="col-4">
+                            <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage +1)"
+                                    class="btn btn-outline-light @(!(QuestionPaged.CurrentPage < QuestionPaged.Pages) ? "disabled" : "")">
+                                Next
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-2 align-self-center" @onclick="() => OpenSearchBar()">
+                        <span class="oi oi-magnifying-glass text-white" aria-hidden="true"></span>
+                    </div>
+                </div>
+            </div>
+        </TopNavBar>
+    </div>
 </div>
 
 
@@ -149,6 +184,9 @@
     [Parameter]
     public int topicRef { get; set; } = 0;
     public int Answers { get; set; } = 0;
+    public bool searchBarOpen = false;
+    public bool searchResultsNull = false;
+    private string searchTerm = "";
     public int qts;
 
     QuestionPaged QuestionPaged = new ();
@@ -166,8 +204,16 @@
             Answers = 0;
     }
 
-    private async Task GetQuestions(int page = 1)
+    private async Task GetQuestions(int page = 1) => QuestionPaged = await repository.GetPagedQuestions(topicRef, page, 10f);
+    private async Task GetSearchQuestions(int page = 1)
     {
-        QuestionPaged = await repository.GetPagedQuestions(topicRef, page, 10f);
+        QuestionPaged = await repository.GetSearchPagedQuestions(topicRef, page, 30f, searchTerm);
+        if (QuestionPaged.Questions.ToList().Count() == 0)
+        {
+            searchResultsNull = true;
+        }
     }
+    private void OpenSearchBar() => searchBarOpen = !searchBarOpen;
+
+
 }
