--- a/Pages/User/Questions.razor
+++ b/Pages/User/Questions.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>Questions</PageTitle>
 
-<div class="text-center position-absolute">
+<div class="text-center">
 
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -138,7 +138,7 @@
     <div class="fixed-bottom">
         <TopNavBar>
             <div class="container align-content-center justify-content-center text-center">
-                <div class="mb-2" style="display:@(searchBarOpen == true ? "block" : "none");">
+                <div class="mb-md-2 mb-sm-2 me-lg-5" style="display:@(searchBarOpen == true ? "block" : "none");">
                     <div class="row text-center">
                         <div class="col-10">
                             <InputText class="form-control" DisplayName="searchQuestions" @bind-Value="searchTerm" placeholder="Search for one keyword" />
