--- a/Pages/User/ChangeLog.razor
+++ b/Pages/User/ChangeLog.razor
@@ -12,6 +12,18 @@
     <div class="justify-content-center align-content-center">
         <ul>
             <li>
+                <h2 class="fw-bold">Version 1.3</h2>
+                <h5 class="text-muted">Release Date: 06 April 2023</h5>
+                <ul>
+                    <li>
+                        <em>*New Feature*</em> Added Search function to the questions
+                    </li>
+                    <li>
+                        <em>*New Feature*</em> Bottom navigation page for questions page
+                    </li>
+                </ul>
+            </li>
+            <li>
                 <h2 class="fw-bold">Version 1.2</h2>
                 <h5 class="text-muted">Release Date: 11 March 2023</h5>
                 <ul>
