--- a/Pages/User/About.razor
+++ b/Pages/User/About.razor
@@ -55,8 +55,8 @@
                 <div class="h5">Send me an email</div>
                 <p class="text-muted mb-0">
                     Get in touch at
-                    <a href="mailto:support@medbase.co.zw?subject=Medbase:%20<Subject%20here>">
-                        support@medbase.co.zw
+                    <a href="mailto:admin@medbase.co.zw?subject=Medbase:%20<Subject%20here>">
+                        admin@medbase.co.zw
                     </a>
                 </p>
             </div>
